# cura

./: README.md  langgraph.json  main.py  pyproject.toml
.claude/: settings.json
.claude/rules/: git.md  user-preferences.md
.github/workflows/: ci.yml
docs/: context.md
src/cura/: agent.py  cli.py
src/cura/tools/: web_loader.py
