[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cura"]

[project]
name = "cura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain-mistralai>=1.1.2",
    "langgraph>=1.1.9",
    "pydantic>=2.13.3",
]

[project.scripts]
cura = "cura.cli:main"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
]
